cmake_minimum_required(VERSION 3.13)
include(pico_sdk_import.cmake)
project(test_project C CXX ASM)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
pico_sdk_init()

include(cmake/clang-cxx-dev-tools.cmake)

if (PICO_CYW43_SUPPORTED)
  add_compile_definitions(PICO_W)
  add_subdirectory(01_microphone_streaming)
  add_subdirectory(02_speaker_streaming)
  add_subdirectory(07_duplex_streaming)
endif()

add_subdirectory(03_microphone_loopback)
add_subdirectory(08_voice_changer)
add_subdirectory(09_dalek)
add_subdirectory(10_tuner)
add_subdirectory(11_display)
add_subdirectory(12_capture_audio)
add_subdirectory(13_guitar_effects)
add_subdirectory(14_timer)
add_subdirectory(17_frequency_generator)
add_subdirectory(18_transmitter)
add_subdirectory(19_fm_transmitter)
add_subdirectory(20_power_swr_meter)
add_subdirectory(Library)


